--- a/Tex/conclusions.tex
+++ b/Tex/conclusions.tex
@@ -1,4 +1,4 @@
-\section{Conclusions}
+\section{Conclusions}\label{conclusion_section}
 
 This note has discussed the multiple coloumb scattering technique for estimating the momentum of a three dimensional reconstructed track and provided motivation for demonstration of the capabilities of this tool within the neutrino LArTPC community. The details of the implementation of this code have been described. The gaussian nature of scatters predicted by the Highland formula has been demonstrated. Additionally the performance of this method has been quantified in three different forms of simulation of fully contained tracks (single muon {\sc MCTracks}, truth-selected simulated BNB neutrino events, and automatically-selected selected BNB + cosmic neutrino events) as well as in approximately 0.5e20 POT of {\ub} data. The methods used to optimize the segment length (10 cm) and detector resolution term (2 mrad) in the MCS algorithm have been described. To summarize the performance on these different fully contained track samples, the bias and resolution for the different samples are overlaid in Figure \ref{MCS_range_bias_resolution_masteroverlay_fig}. Other uses besides momentum reconstruction for the MCS technique have been described, including using it as a tool for identification of poorly reconstructed tracks, determination of track direction, particle identification. 
 
@@ -27,7 +27,7 @@ This note has discussed the multiple coloumb scattering technique for estimating
 
 
 
-\section{Possible Plots for Publication}
+\section{Possible Plots for Publication}\label{publicplots_section}
 Here are a few plots that I think should be considered for the publication. Bear in mind, in my opinion the publication should have its scope kept small so as to get it published in a very quick time scale. These plots of course can be modified, their captions changed, etc... I am just putting them here to paint a picture for the readers of this technote what I think should be included in the publication.
 \begin{enumerate}
 	\item Figure \ref{pub_plot_1} is a general image whose purpose is to aid the reader in understanding what MCS is and how the code works. I'm not sure this one is public-domain, but I can easily make my own version of it if necessary.
