--- a/Tex/data_performance.tex
+++ b/Tex/data_performance.tex
@@ -38,7 +38,7 @@ A sample event that was removed by the hand scanner is shown in Figure \ref{bad_
 \subsection{MCS Momentum Validation}\label{MCS_Momentum_Validation_DataRecoTrack_section}
 For this sample of reconstructed tracks from $\nu_\mu$ charged current events in data, only the 3D trajectory points of each reconstructed track are used as input to the MCS code, described in Section \ref{MCS_technique_section}. The resulting MCS momentum versus range-based momentum \textit{without any additional hand-scan reconstruction quality checks} can be seen in Figure \ref{MCS_range_momentum_DataRecoTrack_nohandscan_fig}. The off-diagonal visible in this figure (where MCS momentum greatly overestimates range momentum) is caused both by poor track reconstruction (truncated tracks) and MIDs. Figure \ref{MCS_range_momentum_RecoTrack_withandwithouthandscan_fig} divides Figure \ref{MCS_range_momentum_DataRecoTrack_nohandscan_fig} into those events which are handscanned as having poorly reconstructed or obviously MID'd tracks, and those which are well reconstructed. It can be seen that hand-scanning tends to remove the off-diagonal and therefore improve the MCS momentum resolution.\\
 
-In order to compute a bias and a resolution, Figure \ref{MCS_range_momentum_DataRecoTrack_fig} (the tracks that were hand scanned as being well-reconstructed) is sliced in bins of range momentum and a histogram of the fractional momentum difference ($\frac{p_{MCS} - p_{range}}{p_{range}}$) is created for each bin. This distribution is shown for two representative bins in Figure \ref{MCS_range_bias_resolution_DataRecoTrack_slices_fig}. The mean of each distribution is used to compute a bias as a function of range momentum, while the standard deviation of each distribution is used to compute a resolution. The bias and resolution for this momentum reconstruction method shown in Figure \ref{MCS_range_bias_resolution_DataRecoTrack_fig}. This figure indicates a positive bias in the MCS momentum resolution on the order of a few percent, with a resolution that decreases from about 13\% for contained reconstructed tracks with range momentum around 0.5 GeV (which corresponds to a length of about 1.7 meters) to below 8\% for contained reconstructed tracks with range momentum greater than 0.8 GeV (which corresponds to a length of about 3.1 meters). This agrees well with the same bias and resolution measurement in simulation as shown in Figure \ref{MCS_range_bias_resolution_MCBNBSelectedRecoTrack_fig}. Note the bias and resolution plots stop at a maximum range-based momentum of below 1.4 GeV due to limited statistics.
+In order to compute a bias and a resolution, Figure \ref{MCS_range_momentum_DataRecoTrack_fig} (the tracks that were hand scanned as being well-reconstructed) is sliced in bins of range momentum and a histogram of the fractional momentum difference ($\frac{p_{MCS}^{-1} - p_{range}^{-1}}{p_{range}^{-1}}$) is created for each bin. Note that the inverse of the momentum is used rather than the momentum because this distribution is more gaussian distributed. Also note that this fractional momentum difference using inverse of momentum is algebraically equivalent to ($\frac{p_{range} - p_{MCS}}{p_{MCS}}$). This distribution is shown for two representative bins in Figure \ref{MCS_range_bias_resolution_DataRecoTrack_slices_fig}, along with the gaussian fit to each.  The mean ($\mu$) of each gaussian fit is used to compute a bias as a function of range momentum, while the width ($\sigma$) of each distribution is used to compute a resolution. The bias and resolution for this momentum reconstruction method shown in Figure \ref{MCS_range_bias_resolution_DataRecoTrack_fig}. This figure indicates a bias in the MCS momentum resolution on the order of a few percent, with a resolution that decreases from about 10\% for contained reconstructed tracks with range momentum around 0.5 GeV (which corresponds to a length of about 1.7 meters) to about 9\% for contained reconstructed tracks with range momentum greater than 0.8 GeV (which corresponds to a length of about 3.1 meters). This is only slightly higher than the the same bias and resolution measurement in simulation as shown in Figure \ref{MCS_range_bias_resolution_MCBNBSelectedRecoTrack_fig}, a difference which may be attributed to the inefficiencies in hand scanning (as compared to the truth-based MID removal and track-well-reconstructed checks in simulation-based sections). Note the bias and resolution plots here stop at a maximum range-based momentum of below 1.4 GeV due to limited statistics.
 
 
 \begin{figure}[ht!]
