--- a/main.tex
+++ b/main.tex
@@ -30,7 +30,9 @@
 \input{./Tex/global_vars.tex}
 
 \section{Note Content Overview}
-This is a technote internal to the MicroBooNE collaboration quantifying the performance of the multiple coloumb scattering based momentum estimation technique. While the note may seem lengthy, do not fear. Many sections are essentially the same, containing the same plots constructed in the same way, but from different input samples. In general the structure of this note is as follows:
+This is a technote internal to the MicroBooNE collaboration quantifying the performance of the multiple coloumb scattering (MCS) based momentum estimation technique. The message of this note is that MCS is an important technique for LArTPCs measuring neutrino interactions, and we have demonstrated the MCS technique works and we have quantified its performance both on simulation and data. Ideally this analysis will lead to a publication in a journal like JINST. A list of potential plots to be included in the publication can be found at the end of this note, in Section \ref{publicplots_section}. From those plots one can infer the  scope of the publication.\\
+
+While the note may seem lengthy, do not fear. Many sections are essentially the same, containing the same plots constructed in the same way, but from different input samples. In general the structure of this note is as follows:
 \begin{enumerate}
 \item An introduction to the MicroBooNE detector, and motivation for the multiple coloumb scattering method for this experiment and within the future LArTPC community.
 \item A detailed description of how the actual method works.
@@ -43,17 +45,17 @@ This is a technote internal to the MicroBooNE collaboration quantifying the perf
 
 
 \input{./Tex/introduction.tex}
-\clearpage
+% \clearpage
 \input{./Tex/technique.tex}
-\clearpage
+% \clearpage
 \input{./Tex/MC_singlemuon_performance.tex}
-\clearpage
+% \clearpage
 \input{./Tex/MC_trueneutrino_performance.tex}
-\clearpage
+% \clearpage
 \input{./Tex/MC_selected_neutrino_performance.tex}
-\clearpage
+% \clearpage
 \input{./Tex/data_performance.tex}
-\clearpage
+% \clearpage
 \input{./Tex/conclusions.tex}
 
 
